# gateway

./: Dockerfile  PROJECT_TREE.txt  PROJECT_TREE_DDD.txt  README  pyproject.toml  test-docker-compose.yml
app/: main.py
app/admin/: __init__.py
app/admin/gateway/: admin_gateway.py  iadmin_gateway.py
app/admin/grpc/: admin_service.py  iadmin_service.py
app/admin/router/: post.py  profile.py  user.py
app/admin/utils/: converter.py
app/auth/: __init__.py
app/auth/gateway/: auth_gateway.py  iauth_gateway.py
app/auth/grpc/: auth_service.py  iauth_service.py
app/auth/router/: auth.py  registration.py
app/auth/service/: auth_service.py  iauth_service.py
app/auth/utils/: check.py  converter.py  schemas.py
app/core/: config.py
app/core/redis/: rd_hellper.py  redis.py
app/core/redis/repositories/: redis_repositories.py
app/post/: __init__.py
app/post/gateway/: ipost_gateway.py  post_gateway.py
app/post/grpc/: ipost_service.py  post_service.py
app/post/router/: post.py
app/post/utils/: converter.py  schemas.py
app/profile/: __init__.py
app/profile/router/: profile.py
app/profile/utils/: schemas.py
app/user/: __init__.py
app/user/gateway/: iuser_gateway.py  user_gateway.py
app/user/grpc/: iuser_service.py  user_service.py
app/user/router/: user.py
app/user/utils/: converter.py  schemas.py
app/utils/: check.py  converter.py  schemas.py  user_current.py
