[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Weit145 <weit.dima@yandex.ru>"]
readme = "README.md"
package-mode = false  # важно! если не хочешь устанавливать как пакет

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.121.0,<0.122.0"
uvicorn = { version = ">=0.35.0,<0.36.0", extras = ["standard"] }
pydantic = { version = ">=2.11.9,<3.0.0", extras = ["email"] }
grpcio = ">=1.76.0,<2.0.0"
grpcio-tools = ">=1.76.0,<2.0.0"
python-multipart = ">=0.0.20,<0.0.21"
redis = ">=7.1.0,<8.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"